2004-09-02 Borut Razem <borut.razem@siol.net>
	* cli/socket.cc: read complete line before procesing,
	  support for different line endings (LF, CR-FL)
	* cli/cmd_macro.cc: enable compilation on VS 7.1

2004-09-02 Scott Dattalo <scott@dattalo.com>
	* cli/cmd_macro.cc:
	Clarified the help description for the macro command.
	
2004-09-02 Scott Dattalo <scott@dattalo.com>
	* cli/cmd_macro.cc, cli/cmd_macro.h, cli/scan.h, cli/scan.ll: 
	Completed support for parameterized macros

2004-09-02 Scott Dattalo <scott@dattalo.com>
	* cli/cmd_macro.cc, cli/cmd_macro.h, cli/input.cc,
	cli/parse.yy, cli/scan.ll: Added support for parameterized
	macros. This is not completed


2004-09-02 Borut Razem <borut.razem@siol.net>
	* cli/input.cc, cli/socket.cc: socket port to WIN32
	* gpsim/gpsim.vcproj, cli/cli.vcproj, cli/makefile.mingw,
	  gpsim/makefile.mingw: added cmd_macro.* and socket.cc to
	  the project, wsock32.lib dependency

2004-09-01 Scott Dattalo <scott@dattalo.com>
	* cli/parse.yy: Fixed a bug that caused old versions of bison
	to choke.
	
2004-09-01 Scott Dattalo <scott@dattalo.com>
	* cli/cmd_macro.cc, cli/input.cc:
	Converted the LLInput struct into a class. Now, the macro
	command can invoke a macro and redirect it's output to the
	parser stream.
	* src/trace.cc, src/trace.h:
	Added the ProcessorTraceObject to the TraceObject heirarchy.
	Now, TraceObjects no longer store info about a processor.
	(Thus modules can be processor agnostic.)
	
2004-09-01 Scott Dattalo <scott@dattalo.com>
	* src/p16x5x.cc: The 16C55 processor was only declaring a 
	package of 18 pins (instead of 28).

2004-08-31 Scott Dattalo <scott@dattalo.com>
	* cli/cmd_macro.cc, cli/cmd_macro.h:
	Added the 'macro' command.
	* cli/Makefile.am, cli/parse.yy, cli/command.cc, cli/scan.ll:
	Parser now calls the gpsim command cmd_macro.
	
2004-08-31 Scott Dattalo <scott@dattalo.com>
	* cli/scan.ll, cli/parse.yy:
	Added language support for macro definitions. (although,
	macros are not yet supported).
	